src/objects/echosign_dev1__Merge_Mapping_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>echosign_dev1__Attach_Merged_Document__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When an Adobe Sign merge mapping is used for an agreement, attach the merged document to the agreement record after the agreement is sent.</description>
        <inlineHelpText>When an EchoSign merge mapping is used for an agreement, attach the merged document to the agreement record after the agreement is sent.</inlineHelpText>
        <label>Attach Merged Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Remove_Original_Attachment__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When an Adobe Sign merge mapping is used for an agreement, remove the original template document from the agreement record after the agreement is sent.</description>
        <inlineHelpText>When an EchoSign merge mapping is used for an agreement, remove the original template document from the agreement record after the agreement is sent.</inlineHelpText>
        <label>Remove Original Document</label>
        <type>Checkbox</type>
    </fields>
    <label>Adobe Sign Merge Mapping Settings</label>
</CustomObject>